# WavGPT

./: .gitignore  README.md  pyproject.toml
scripts/: analyze.py  train.py
src/wavgpt/: __init__.py  analysis.py  config.py  data.py  models.py  training.py
src/wavgpt/analysis/: __init__.py  coefficient_selection.py  frequency_content.py  frequency_importance.py  runner.py  utils.py
src/wavgpt/embed/: data.py  embeddings.py
src/wavgpt/utils/: load_checkpoint.py  save_checkpoint.py
tests/: README.md  __init__.py  hidden_states.py  similarity_utils.py  test_coeff_similarities.py  test_direct_coeffs.py  test_direct_model.py  test_embeddings_roundtrip.py  test_gradient_flow.py  test_without_compression.py
